# medqa-auto-eval-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  eval.py  pyproject.toml  requirements.txt  validate.py
evals/: evals.json
judge/: DESIGN.md  README.md  __init__.py  batch_runner.py  capabilities.py  dut_responses.py  generate_answers.py  generate_dut.py  gold_retrieval.py  input_parser.py  judge.py  llm_client.py  models.py  paths.py  rag.py  refs.py  report.py  rubrics.py  runner.py  scoring.py
references/: PROTOCOL.md  README.md  capabilities.json  rubrics.md  rubrics.yaml
scripts/: __init__.py  export_rubrics_md.py  validate.py
tests/: test_e2e.py  test_generate_answers.py  test_generate_dut.py  test_gpt41_fixture.py  test_judge_compare_integration.py  test_sampling.py
tests/fixtures/gpt41_agent_slice/: MedCOT.jsonl
