[project]
name = "medbench-eval"
version = "0.1.0"
description = "LLM-as-judge evaluation for MedBench-Agent-95 medical AI benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
