[project]
name = "medbench-eval"
version = "0.1.0"
description = "LLM-as-judge evaluation for MedBench-Agent-95 medical AI benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: calls external LLM API (opt-in)",
]

[tool.coverage.run]
branch = true
source = ["judge", "scripts"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 0
show_missing = true
